# bayesian-optimization-sputter-deposition

./: README.md  citation.cff  pyproject.toml
pvd_demo_run/: DNN.py  DNN_combine.pth  Save_GP_NN_Surrogates.ipynb  plots_demo.py  run_demo.ipynb  run_demo.py
pvd_demo_run/.ipynb_checkpoints/: Save_GP_NN_Surrogates-checkpoint.ipynb
pvd_demo_run/models/: Known_gp_objects.pkl
pvd_exp_run/: bayesopt_custom_obj.ipynb  datasetup.py  exp_analysis.ipynb  job.sh  nohup.out  notes.txt  plots.py  plots_for_paper.ipynb  run.py  run_noiseopt.py
pvd_exp_run/.ipynb_checkpoints/: Latin_hyper_cube_sampling-checkpoint.ipynb  bayesopt_custom_acq-checkpoint.ipynb  bayesopt_custom_obj-checkpoint.ipynb  demo_custom_obj-checkpoint.ipynb  exp_analysis-checkpoint.ipynb  plots_for_paper-checkpoint.ipynb
src/: __init__.py  hypertune.py  kernels.py  metrics.py  models.py  samplers.py  scores.py  tracker.py
